fixing image overlap

--- a/app/sections/landing/landingAbout/landing-about.style.scss
+++ b/app/sections/landing/landingAbout/landing-about.style.scss
@@ -1,7 +1,7 @@
 @import '_includes';
 
 .landing-about-container {
-    z-index: 100;
+    z-index: 99;
     background-color: #EEEEEE;
 
     & h1 {
